--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,16 @@ body {
     text-align: center;
     font-family: sans-serif;
 }
+
+div {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    text-align: left;
+}
+
+li {
+    list-style-type: none;
+}
