--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* THE DESKTOP CODE I GUESS */
+/* THE DESKTOP CODE I GUESS (but it also works for mobile)*/
 body {
     font-family: 'IBM Plex Sans', sans-serif;
     text-align: center;
@@ -6,6 +6,8 @@ body {
 
 h1{
     min-width: 200px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 p {
@@ -20,6 +22,8 @@ button {
     transition-duration: 0.4s;
     min-width: 200px;
     min-height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 button:hover {
