added border and card back image

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,10 @@ button:active {
 li {
     list-style-type: none;
 }
+
+#cardPic {
+    max-width: 226px;
+    border: 2px solid black;
+    border-radius: 10px; 
+    padding: 8px;
+}
