--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,12 @@ li {
     list-style-type: none;
 }
 
+ul {
+    padding: 0px;
+    margin: 0px;
+}
+
 #cardPic {
-    max-width: 226px;
-    /* border: 2px solid black; */
-    /* border-radius: 10px;  */
+    max-width: 226px; 
     padding: 10px;
 }
